--- a/index.html
+++ b/index.html
@@ -1,1 +1,375 @@
-<p>”数据“<p><p>"引物"<p><p>"光蜥"<p><p>"滑蜥"<p>
+<center>
+<h3>表 1 丽纹龙蜥荧光定量引物</h3>
+<table>
+	<thead>
+		<tr>
+			<th>引物名称</th>
+			<th>引物序列(5'-3')</th>
+		</tr>
+	</thead>
+    <tbody>
+        <tr>
+            <td>DLLX-ACTIN-J1</td>
+            <td>GCTCTGCTATGTTGCCCTTG</td>
+        </tr>
+        <tr>
+            <td>DLLX-ACTIN-N1</td>
+            <td>ACCTGAACCGCTCATTACCA</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND1-J1</td>
+            <td>TCCTTCTTAGTAGCCGTAGCA</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND1-N1</td>
+            <td>TCCGTCTGCCATTGGTTGA</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND2-J1</td>
+            <td>CCTCATGCCTGCTTCTCCTA</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND2-N1</td>
+            <td>GGTTAGTAGTGTGCTGCCTTG</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND3-J1</td>
+            <td>GCCCTACGAATGCGGATTT</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND3-N1</td>
+            <td>ACAGTTGGTGTTGGTGCTAG</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND4-J1</td>
+            <td>CTAACCAACCTGGCACTTCC</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND4-N1</td>
+            <td>GGTGGCTGAGGCAATAATTGT</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND4L-J2</td>
+            <td>CTAACACTAAATACCCCCCAC</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND4L-N2</td>
+            <td>AGAAGAGGTGACGAGGAGTGT</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND5-J1</td>
+            <td>GCCACAGCAGGAAGTCTTCT</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND5-N1</td>
+            <td>GCTTGGAGTGCGGATGAGT</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND6-J1</td>
+            <td>CGGTGGCGTGTTATTATTCG</td>
+        </tr>
+        <tr>
+            <td>DLLX-ND6-N1</td>
+            <td>ACCAGCACCAACAATTAGGAG</td>
+        </tr>
+        <tr>
+            <td>DLLX-ATP6-J1</td>
+            <td>CGCCTGACCGCTAACCTAA</td>
+        </tr>
+        <tr>
+            <td>DLLX-ATP6-N1</td>
+            <td>TGGATGAGTGCTACGGCTATT</td>
+        </tr>
+        <tr>
+            <td>DLLX-ATP8-J1</td>
+            <td>GCAACTTAACCCAAACCCAT</td>
+        </tr>
+        <tr>
+            <td>DLLX-ATP8-N1</td>
+            <td>TTGGATTTGTGGTTGTGGTG</td>
+        </tr>
+        <tr>
+            <td>DLLX-COI-J1</td>
+            <td>CTTGTGAGCCTTCTTGTACGA</td>
+        </tr>
+        <tr>
+            <td>DLLX-COI-N1</td>
+            <td>TTCCGAAGCCGCCGATTA</td>
+        </tr>
+        <tr>
+            <td>DLLX-COII-J1</td>
+            <td>CACGACTACGCCATAACTACC</td>
+        </tr>
+        <tr>
+            <td>DLLX-COII-N1</td>
+            <td>TCGGTTAGTACGGTGGTGAA</td>
+        </tr>
+        <tr>
+            <td>DLLX-COIII-J1</td>
+            <td>GCCAATTCTAGCCGCCATATC</td>
+        </tr>
+        <tr>
+            <td>DLLX-COIII-N1</td>
+            <td>TGTGCCTTCACGAATGATGTC</td>
+        </tr>
+        <tr>
+            <td>DLLX-CYTB-J1</td>
+            <td>TAGCCGCCTCAGTCCTAATC</td>
+        </tr>
+        <tr>
+            <td>DLLX-CYTB-N1</td>
+            <td>CCGCTTGGTTGTCCTCCTA</td>
+        </tr>
+    </tbody>
+</table>
+
+
+<h3>表 2 光蜥荧光定量引物</h3>
+<table>
+	<thead>
+		<tr>
+			<th>引物名称</th>
+			<th>引物序列(5'-3')</th>
+		</tr>
+	</thead>
+    <tbody>
+        <tr>
+            <td>DLGX-ACTIN-J1</td>
+            <td>AAGGAGAAGCTGTGCTATGTG</td>
+        </tr>
+        <tr>
+            <td>DLGX-ACTIN-N1</td>
+            <td>AGGAAGGAAGGCTGGAAGAG</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND1-J1</td>
+            <td>GACCATCCTCCTCTTCACCAA</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND1-N1</td>
+            <td>AGTAGACCGCAGTGCTTGATA</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND2-J2</td>
+            <td>CCGAGCAACAGAAGCAACAA</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND2-N2</td>
+            <td>AAGTATCGTACAGGCGTAGGG</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND3-J1</td>
+            <td>AACCCTCCCAGACACAGAAA</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND3-N1</td>
+            <td>GCAAGAATAGGATGGCGACTA</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND4-J2</td>
+            <td>CCTTCTCCGCCACAGACTT</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND4-N2</td>
+            <td>TAGCCGTTCAGCTTGATTACC</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND4L-J1</td>
+            <td>GCTGCCTACCAACACAATGT</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND4L-N1</td>
+            <td>GTTCTGTATGTGGTCGGTTCC</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND5-J1</td>
+            <td>CAAGACCGCCTTATCACTCTG</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND5-N1</td>
+            <td>TGCTAGTTGTGGTTGGTTGAG</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND6-J1</td>
+            <td>GGACCCGTATCCTGAGACT</td>
+        </tr>
+        <tr>
+            <td>DLGX-ND6-N1</td>
+            <td>GCACGAATCAACCCAAATC</td>
+        </tr>
+        <tr>
+            <td>DLGX-ATP6-J1</td>
+            <td>TACCAGAAGGCACTCCTACAC</td>
+        </tr>
+        <tr>
+            <td>DLGX-ATP6-N1</td>
+            <td>GCTGTGAGGTTGGCAGTTAG</td>
+        </tr>
+        <tr>
+            <td>DLGX-ATP8-J1</td>
+            <td>ATGCCACAACTAAATCCCG</td>
+        </tr>
+        <tr>
+            <td>DLGX-ATP8-N1</td>
+            <td>TTGATTTGGGTTGAGGCTG</td>
+        </tr>
+        <tr>
+            <td>DLGX-COI-J2</td>
+            <td>GCTCCACGACACTTACTACG</td>
+        </tr>
+        <tr>
+            <td>DLGX-COI-N2</td>
+            <td>GCCTGCGAATATTACTCCGAA</td>
+        </tr>
+        <tr>
+            <td>DLGX-COII-J2</td>
+            <td>CAGACTACGAGGACCTGTTGT</td>
+        </tr>
+        <tr>
+            <td>DLGX-COII-N2</td>
+            <td>ACGGCTCACGAGTGGAGAA</td>
+        </tr>
+        <tr>
+            <td>DLGX-COIII-J2</td>
+            <td>GGCTTCGCTACGGAATAGTC</td>
+        </tr>
+        <tr>
+            <td>DLGX-COIII-N2</td>
+            <td>GTTAATGCCGCTTGGAGGTC</td>
+        </tr>
+        <tr>
+            <td>DLGX-CYTB-J1</td>
+            <td>CCTTGTCATAGCCACAGCATT</td>
+        </tr>
+        <tr>
+            <td>DLGX-CYTB-N1</td>
+            <td>CGCCTCAGATCCACTCTACTA</td>
+        </tr>
+    </tbody>
+</table>
+
+    
+<h3>表 3 原尾蜥虎荧光定量引物</h3>
+<table>
+	<thead>
+		<tr>
+			<th>引物名称</th>
+			<th>引物序列(5'-3')</th>
+		</tr>
+	</thead>
+    <tbody>
+        <tr>
+            <td>DLXH-ND1-N1</td>
+            <td>GTTGTTGGTCGTGTTGGTTCT</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND2-J1</td>
+            <td>CACCATACCACCAGCACTAATC</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND2-N1</td>
+            <td>TAAGGCAACCAGGAGTCACC</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND3-J1</td>
+            <td>TCCCATTCTCAATACGCTTCTT</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND3-N1</td>
+            <td>TGTTGTAAGGTGTAGTGTTGTG</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND4-J1</td>
+            <td>AGCCTGTATAGCCGCACTAC</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND4-N1</td>
+            <td>GATGATTCCGTATCCGCCAAG</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND4L-J1</td>
+            <td>AACTATAAGCACCACCACAGC</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND4L-N1</td>
+            <td>TTAGGTTGTCCGAGGCGTAT</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND5-J1</td>
+            <td>ATCCGCACCTACCACGATTC</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND5-N1</td>
+            <td>CGGTTGAAGATTACGGCTTGAA</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND6-J2</td>
+            <td>GGGATGCTTGTTGTGTTTGC</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND6-N2</td>
+            <td>AACCACCGCCTCCATTACA</td>
+        </tr>
+        <tr>
+            <td>DLXH-ATP6-J1</td>
+            <td>ATCGCACAACAGCACTACAG</td>
+        </tr>
+        <tr>
+            <td>DLXH-ATP6-N1</td>
+            <td>GGTGAAGGTATATGGCAGGAG</td>
+        </tr>
+        <tr>
+            <td>DLXH-ATP8-J1</td>
+            <td>TATAACTGCTGTCGTCACCTG</td>
+        </tr>
+        <tr>
+            <td>DLXH-ATP8-N1</td>
+            <td>CTGATTGTGTTGATGGGTTTGG</td>
+        </tr>
+        <tr>
+            <td>DLXH-CO1-J1</td>
+            <td>CTCGCCGCTACTCTGACTAC</td>
+        </tr>
+        <tr>
+            <td>DLXH-CO1-N1</td>
+            <td>GCTGAGAAGTGTGGTTGATGTT</td>
+        </tr>
+        <tr>
+            <td>DLXH-COII-J1</td>
+            <td>CCGCCTCACCAACCATAGA</td>
+        </tr>
+        <tr>
+            <td>DLXH-COII-N1</td>
+            <td>GGGCAGCACAGTTCAAATAGT</td>
+        </tr>
+        <tr>
+            <td>DLXH-COIII-J1</td>
+            <td>GCAAGCGATAGAGTACGGAGA</td>
+        </tr>
+        <tr>
+            <td>DLXH-COIII-N1</td>
+            <td>CCAGGCATACAGTGAGGAATG</td>
+        </tr>
+        <tr>
+            <td>DLXH-CYTB-J1</td>
+            <td>ACCACCACATATTAAGCCAGAG</td>
+        </tr>
+        <tr>
+            <td>DLXH-CYTB-N1</td>
+            <td>GCGACTGATATAAGGAGTGCTA</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND1-N1</td>
+            <td>GTTGTTGGTCGTGTTGGTTCT</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND2-J1</td>
+            <td>CACCATACCACCAGCACTAATC</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND2-N1</td>
+            <td>TAAGGCAACCAGGAGTCACC</td>
+        </tr>
+    </tbody>
+</table>
+</center>
