--- a/index.html
+++ b/index.html
@@ -372,4 +372,328 @@
         </tr>
     </tbody>
 </table>
+
+	
+<h3>表 4 蜥蜴兼并引物信息</h3>
+<table>
+	<thead>
+		<tr>
+			<th>引物名称</th>
+			<th>引物序列(5'-3')</th>
+		</tr>
+	</thead>
+    <tbody>
+       <tr>
+            <td>xiyi-12S-N1225</td>
+            <td>CANBTTTCCCTTGCGGTACT</td>
+        </tr>
+        <tr>
+            <td>xiyi-12S-J505</td>
+            <td>ACAAACTAGGATTAGATACCC</td>
+        </tr>
+        <tr>
+            <td>16SL</td>
+            <td>AACCCYYGTACCTYTTGCATCATG</td>
+        </tr>
+        <tr>
+            <td>16SH</td>
+            <td>TCCACAGGGTCTTYTCGTC</td>
+        </tr>
+        <tr>
+            <td>ND1-ND2L</td>
+            <td>CGATTTCGCTATGACCAACT</td>
+        </tr>
+        <tr>
+            <td>ND1-ND2H</td>
+            <td>ATTGATGAGWAKGCTATRATTTTTCG</td>
+        </tr>
+        <tr>
+            <td>ND2-CO1L</td>
+            <td>GCCCCMYTMCACTTCTGA</td>
+        </tr>
+        <tr>
+            <td>DLXH-ND4L-J1</td>
+            <td>AACTATAAGCACCACCACAGC</td>
+        </tr>
+        <tr>
+            <td>ND2-CO1H</td>
+            <td>GTAHAGGGTGCCRATRTCTTT</td>
+        </tr>
+        <tr>
+            <td>SX-ND5-ND6-N</td>
+            <td>ATATTAGTAGTGTTTGTSTATAC</td>
+        </tr>
+        <tr>
+            <td>SX-ND5-ND6-J</td>
+            <td>GARCARGACCTYCGACTAATRGG</td>
+        </tr>
+        <tr>
+            <td>CO2-ATP6L</td>
+            <td>GGMCAYCAATGATACTGA</td>
+        </tr>
+        <tr>
+            <td>CO2-ATP6H</td>
+            <td>AARYTTAKGGTCATGGTCA</td>
+        </tr>
+        <tr>
+            <td>ND4-CUNL</td>
+            <td>CCMAAAGCCCAYGTAGAAGC</td>
+        </tr>
+        <tr>
+            <td>ND4-CUNH</td>
+            <td>CTTHTACTTGGADTTGCACC</td>
+        </tr>
+        <tr>
+            <td>SX-ND5-GLU-N</td>
+            <td>ATAACAACGAYGGTTTTTC</td>
+        </tr>
+        <tr>
+            <td>SX-ND5-GLU-J</td>
+            <td>YTYATTAACGCCTGAGCCTT</td>
+        </tr>
+        <tr>
+            <td>CYTB-ProL</td>
+            <td>TGAGGACAAATATCMTTCTGAGG</td>
+        </tr>
+        <tr>
+            <td>CYTB-ProH</td>
+            <td>TTAAAATKCTAGTTTTGG</td>
+        </tr>
+        <tr>
+            <td>Thr-CRL</td>
+            <td>YAAAGCMTTGRTCTTGTAA</td>
+        </tr>
+        <tr>
+            <td>Thr-CRH</td>
+            <td>CTCGAKTTTWGGGGTTTGRCGA</td>
+        </tr>
+        <tr>
+            <td>CR-12SL</td>
+            <td>TCGYCAAACCCCWAAAMCGAG</td>
+        </tr>
+        <tr>
+            <td>CR-12SH</td>
+            <td>TRTAACCGCGGTKGCTGGCAC</td>
+        </tr>
+    </tbody>
+<p>注:W=A/T,R=A/G,K=G/T,Y=C/T,S=G/C,M=A/C,B=C/G/T,D=A/G/T,H=A/C/T,N=A/C/G/T.</p>
+</table>  
+
+	
+<h3>表 5 丽纹龙蜥特异性引物序列</h3>
+<table>
+	<thead>
+		<tr>
+			<th>引物名称</th>
+			<th>引物序列(5'-3')</th>
+		</tr>
+	</thead>
+    <tbody>
+       <tr>
+            <td>DLLX-J-871</td>
+            <td>GGCAAGTCGTAACAAGGTAA</td>
+        </tr>
+        <tr>
+            <td>DLLX-N-1349</td>
+            <td>GAAGTTCGTATTTCGGGC</td>
+        </tr>
+        <tr>
+            <td>DLLX-J-1066</td>
+            <td>CAACACATTTGCCACAGG</td>
+        </tr>
+        <tr>
+            <td>DLLX-N-3583</td>
+            <td>GATACGAGGAGTTTTGGATTC</td>
+        </tr>
+        <tr>
+            <td>DLLX-J-4128</td>
+            <td>TACTTCAAGGCAGCACACTA</td>
+        </tr>
+        <tr>
+            <td>DLLX-N-6852</td>
+            <td>CATAAGTTGAGATGGTTCGG</td>
+        </tr>
+        <tr>
+            <td>DLLX-J-7493</td>
+            <td>TCACTACAGAATCCATCCCAG</td>
+        </tr>
+        <tr>
+            <td>DLLX-N-10902</td>
+            <td>TATTGTGCCAGAGACGCTT</td>
+        </tr>
+        <tr>
+            <td>DLLX-J-11008</td>
+            <td>AACTAACACACGCACAATCT</td>
+        </tr>
+        <tr>
+            <td>DLLX-N-12796</td>
+            <td>CGTATGGTGTAGGAGGATGT</td>
+        </tr>
+        <tr>
+            <td>DLLX-J-13478</td>
+            <td>CAAACCCAGACTCAAAATCA</td>
+        </tr>
+        <tr>
+            <td>DLLX-N-656</td>
+            <td>CGTGCTTGTGGTAGAACTT</td>
+        </tr>
+    </tbody>
+</table>  
+
+	
+<h3>表 6 光蜥特异性引物序列</h3>
+<table>
+	<thead>
+		<tr>
+			<th>引物名称</th>
+			<th>引物序列(5'-3')</th>
+		</tr>
+	</thead>
+    <tbody>
+        <tr>
+            <td>GDGX-J-832</td>
+            <td>AAGAAAACACGAACGGCA</td>
+        </tr>
+        <tr>
+            <td>GDGX-N-1596</td>
+            <td>CCTACTGGTTGGGGAAGC</td>
+        </tr>
+        <tr>
+            <td>GDGX-J-1896</td>
+            <td>TAAAAGCCGTAGAAGGAAT</td>
+        </tr>
+        <tr>
+            <td>GDGX-N-4568</td>
+            <td>TGTAGCGAGGTCTTGGAT</td>
+        </tr>
+        <tr>
+            <td>GDGX-J-4796</td>
+            <td>CCTATTTCACCGCCCTAA</td>
+        </tr>
+        <tr>
+            <td>GDGX-N-6818</td>
+            <td>CTTGAGTTGGTTTGGACGA</td>
+        </tr>
+        <tr>
+            <td>GDGX-J-7569</td>
+            <td>CTATGGACAGTGCTCAGAAA</td>
+        </tr>
+        <tr>
+            <td>GDGX-N-11291</td>
+            <td>GGTTGGTGTTGCTCAGTTA</td>
+        </tr>
+        <tr>
+            <td>GDGX-J-11548</td>
+            <td>AACATTAGGCTGTGGTCC</td>
+        </tr>
+        <tr>
+            <td>GDGX-N-13382</td>
+            <td>TCGTATCATAGGTGGTCGT</td>
+        </tr>
+        <tr>
+            <td>GDGX-J-13825</td>
+            <td>AAGTCTCAGGATACGGGT</td>
+        </tr>
+        <tr>
+            <td>GDGX-N-86</td>
+            <td>ACAATGGCAAGTTTAGGA</td>
+        </tr>
+    </tbody>
+</table>
+
+<h3>表 7 原尾蜥虎特异性引物序列</h3>
+<table>
+	<thead>
+		<tr>
+			<th>引物名称</th>
+			<th>引物序列(5'-3')</th>
+		</tr>
+	</thead>
+    <tbody>
+        <tr>
+            <td>XH1-10866-J</td>
+            <td>AACTTGGCGGATACGGAAT</td>
+        </tr>
+        <tr>
+            <td>XH1-15001-N</td>
+            <td>GTGTTGTGGGTTGCTGGAA</td>
+        </tr>
+        <tr>
+            <td>XH1-14835-J</td>
+            <td>CTGCTGGGCGACCCTGAAA</td>
+        </tr>
+        <tr>
+            <td>XH1-16939-N</td>
+            <td>TTGCGGTGCTGTGCGTAGA</td>
+        </tr>
+        <tr>
+            <td>XH1-50-J</td>
+            <td>CGTTAATTCCGTTACCGTA</td>
+        </tr>
+        <tr>
+            <td>XH1-792-N</td>
+            <td>GAAAATGTAGCCCATCTCC</td>
+        </tr>
+        <tr>
+            <td>XH1-7171-J</td>
+            <td>ATAAACGCTCAAATGGTCG</td>
+        </tr>
+        <tr>
+            <td>XH1-11177-N</td>
+            <td>CTCGGGTTAGGAGTAGGGT</td>
+        </tr>
+        <tr>
+            <td>XH1-734-J</td>
+            <td>ATAAACCTTTTGACCGCAC</td>
+        </tr>
+        <tr>
+            <td>XH1-1879-N</td>
+            <td>AGCCGAGTTCCTTTTGTAG</td>
+        </tr>
+        <tr>
+            <td>XH1-1880-J</td>
+            <td>TACAAAAGGAACTCGGCTA</td>
+        </tr>
+        <tr>
+            <td>XH1-4241-N</td>
+            <td>CTGGGTATCAAGTGTGGAC</td>
+        </tr>
+        <tr>
+            <td>XH1-4107-J</td>
+            </td>CAGCCGCTTGTATCCTAT</td>
+        </tr>
+        <tr>
+            <td>XH1-6859-N</td>
+            <td>ATTCCTTCGTCTCTTGGTT</td>
+        </tr>
+        <tr>
+            <td>XH1-4422-J</td>
+            <td>ACCAGACCCAAACACGAAA</td>
+        </tr>
+        <tr>
+            <td>XH1-5377-N</td>
+            <td>GCTCAGGCACCAAACAGTA</td>
+        </tr>
+        <tr>
+            <td>XH1-2040-J</td>
+            <td>GGGCTTGTATGAACGGCTG</td>
+        </tr>
+        <tr>
+            <td>XH1-3313-N</td>
+            <td>GTTTGTTTCGGCGATGGTG</td>
+        </tr>
+        <tr>
+            <td>XH1-14998-J</td>
+            <td>TTATTCCAGCAACCCACAA</td>
+        </tr>
+        <tr>
+            <td>XH1-35-N</td>
+            <td>TCCATTACGGCAACTTCAG</td>
+        </tr>
+        <tr>
+            <td>XH1-781-J</td>
+            <td>AACGGGCAGGAGGAGATGG</td>
+        </tr>
+    </tbody>
+</table>	
 </center>
