--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
         </tr>
         <tr>
             <td>XH1-4107-J</td>
-            </td>CAGCCGCTTGTATCCTAT</td>
+            <td>CAGCCGCTTGTATCCTAT</td>
         </tr>
         <tr>
             <td>XH1-6859-N</td>
